--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -1,7 +1,7 @@
 @import "../colors.scss";
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   padding: 2rem;
 }
